force-app/main/default/objects/Care_Type__c/Care_Type__c.object-meta.xml
<CustomObject>
    <label>Care Type</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Care Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>