force-app/main/default/objects/Care_Type__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Types</relationshipLabel>
    <relationshipName>Care_Types</relationshipName>
    <type>Lookup</type>
</CustomField>