force-app/main/default/objects/Care_Type__c/fields/Application_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference_Number__c</fullName>
    <formula>Application__r.Application_Reference_Number_F__c</formula>
    <label>Application Reference Number</label>
    <type>Text</type>
</CustomField>