force-app/main/default/objects/Care_Type__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Care Types</relationshipLabel>
    <relationshipName>Care_Types</relationshipName>
    <type>Lookup</type>
</CustomField>