force-app/main/default/objects/Care_Type__c/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <formula>Text(ApplicationId__r.NewStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>