force-app/main/default/objects/Care_Type__c/fields/Cease_Date__c.field-meta.xml
<CustomField>
    <fullName>Cease_Date__c</fullName>
    <label>Cease Date</label>
    <type>Date</type>
</CustomField>