force-app/main/default/objects/Care_Type__c/fields/Current_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Status__c</fullName>
    <label>Current Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Funded</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Taken to be Approved</fullName>
            </value>
            <value>
                <fullName>Approval Ceased</fullName>
            </value>
            <value>
                <fullName>Revoked by the Commission</fullName>
            </value>
            <value>
                <fullName>Revoked by Provider</fullName>
            </value>
            <value>
                <fullName>Revoked by Dept</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Intention to Revoke</fullName>
            </value>
            <value>
                <fullName>Decision Pending</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved (threshold criteria not met)</fullName>
            </value>
            <value>
                <fullName>Approval Decision Pending</fullName>
            </value>
            <value>
                <fullName>Not Met Approval Threshold</fullName>
            </value>
            <value>
                <fullName>Approve (with dependencies)</fullName>
                <label>Approved (with dependencies)</label>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Application Threshold Not Met</fullName>
            </value>
            <value>
                <fullName>All services closed prior to 1 Oct 1997</fullName>
            </value>
            <value>
                <fullName>Approved (Not in Force)</fullName>
            </value>
            <value>
                <fullName>Converted to Home Care</fullName>
            </value>
            <value>
                <fullName>Deemed under Consequentials</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Intention to Apply</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>No Information Available</fullName>
            </value>
            <value>
                <fullName>Non Act Aged Care</fullName>
            </value>
            <value>
                <fullName>Non-Operational</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>