force-app/main/default/objects/Care_Type__c/fields/Date_of_Revocation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Revocation_Letter__c</fullName>
    <label>Date of Revocation Letter</label>
    <type>Date</type>
</CustomField>