force-app/main/default/objects/Care_Type__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>