force-app/main/default/objects/Care_Type__c/fields/Dependency_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Due_Date__c</fullName>
    <label>Dependency Due Date</label>
    <type>Date</type>
</CustomField>