force-app/main/default/objects/Care_Type__c/fields/Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconsideration</label>
    <referenceTo>Reconsideration__c</referenceTo>
    <relationshipLabel>Care Types</relationshipLabel>
    <relationshipName>Care_Types</relationshipName>
    <type>Lookup</type>
</CustomField>