force-app/main/default/objects/Care_Type__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding approved and commenced</fullName>
            </value>
            <value>
                <fullName>Funding not approved</fullName>
            </value>
            <value>
                <fullName>Funding approved but suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>