force-app/main/default/objects/Care_Type__c/recordTypes/Approved_Provider_CT.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider_CT</fullName>
    <active>true</active>
    <label>Approved Provider</label>
</RecordType>