force-app/main/default/objects/Care_Type__c/recordTypes/CHSP_CT.recordType-meta.xml
<RecordType>
    <fullName>CHSP_CT</fullName>
    <active>true</active>
    <label>CHSP</label>
</RecordType>