force-app/main/default/objects/Care_Type__c/recordTypes/NATSIFAC_CT.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_CT</fullName>
    <active>true</active>
    <label>NATSIFAC</label>
</RecordType>