force-app/main/default/objects/Care_Type__c/validationRules/CareType_Status_RecommendationtoDelegat.validationRule-meta.xml
<ValidationRule>
    <fullName>CareType_Status_RecommendationtoDelegat</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Application__r.Application_Status__c)=&quot;Recommendation to Delegate&quot;</errorConditionFormula>
    <errorMessage>Cannot Edit Care Type during Recommendation to Delegate.</errorMessage>
</ValidationRule>