force-app/main/default/objects/Care_Type__c/validationRules/Date_of_Revocation_Letter_Field_Vali.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Revocation_Letter_Field_Vali</fullName>
    <active>true</active>
    <description>Applicable if “Change Approval Status to” = Revoked by Provider. Greyed out otherwise.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Current_Approval_Status__c, &apos;Revoked by Provider&apos;)),
    NOT(ISBLANK(Date_of_Revocation_Letter__c))
)</errorConditionFormula>
    <errorDisplayField>Date_of_Revocation_Letter__c</errorDisplayField>
    <errorMessage>Date of Revocation Letter must have no value due to Current Approval Status.</errorMessage>
</ValidationRule>