force-app/main/default/objects/Care_Type__c/validationRules/Date_of_Revocation_Notice_Field_Vali.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Revocation_Notice_Field_Vali</fullName>
    <active>true</active>
    <description>Applicable if “Change Approval Status to” = Revoked by Dept. Greyed out otherwise.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Current_Approval_Status__c, &apos;Revoked by the Commission&apos;)),
    NOT(ISBLANK(Date_of_Revocation_Notice__c))
)</errorConditionFormula>
    <errorDisplayField>Date_of_Revocation_Notice__c</errorDisplayField>
    <errorMessage>Date of Revocation Notice must have no value due to Current Approval Status.</errorMessage>
</ValidationRule>