force-app/main/default/objects/Care_Type__c/validationRules/Obsolete_care_type_application.validationRule-meta.xml
<ValidationRule>
    <fullName>Obsolete_care_type_application</fullName>
    <active>true</active>
    <description>The care type record will be locked when care type application is obsolete.</description>
    <errorConditionFormula>AND(ISPICKVAL( PRIORVALUE( Current_Approval_Status__c ) ,&quot;Obsolete&quot;),
 NOT( $Setup.BypassTriggers__c.BypassValidationRules__c ))</errorConditionFormula>
    <errorMessage>The care type application is obsolete, you cannot make any changes.</errorMessage>
</ValidationRule>