force-app/main/default/objects/Care_Type__c/validationRules/Perm_AP_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AP_Access</fullName>
    <active>true</active>
    <description>Prevents users from updating or creating a AP record type if they do not have the correct permissions.</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
RecordType.DeveloperName = &apos;Approved_Provider_CT&apos;,
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this Approved Provider record</errorMessage>
</ValidationRule>