force-app/main/default/objects/Care_Type__c/validationRules/Perm_NATSIFAC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_NATSIFAC_Access</fullName>
    <active>true</active>
    <description>Prevents the user from creating or updating NATSIFAC records if they do not have the correct permissions.</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
RecordType.DeveloperName = &apos;NATSIFAC_CT&apos;,
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this NATSIFAC record</errorMessage>
</ValidationRule>